# Flight-Delays-Data-Pipeline-and-Analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  ingestao_bronze.ipynb  pyproject.toml  requirements.txt  setup.py  tree.py
.github/ISSUE_TEMPLATE/: task_template.md
airflow/dags/: pl_raw_to_gold.py  pl_stage_to_gold.py
analytics/: Dockerfile.analytics
analytics/analytics_env/: Dockerfile  requirements.txt
analytics/bronze_analysis/: bronze_analysis.ipynb
analytics/gold_analysis/: gold_analysis.ipynb
dags/ingestion/: ingest_stage_to_bronze_dag.py
data-layer/bronze/: 000_create_schemas.sql  metadados_bronze.md
data-layer/gold/: 002_create_table_gold.sql  gold_consultas.sql  gold_dashboard_queries.sql  gold_data_dictionary.md  gold_ddl.sql  mimemonicos_Data_Warehouse.md  mnemonico.md
data-layer/raw/: 000_create_schemas.sql  raw_data_dictionary.md  raw_ddl.sql
data-layer/silver/: 001_create_table_silver.sql  silver_analysis.ipynb  silver_consultas.sql  silver_data_dictionary.md  silver_ddl.sql
data-layer/stage/: flights_part_01.csv  flights_part_02.csv  flights_part_04.csv  flights_part_05.csv  flights_part_06.csv  flights_part_07.csv  flights_part_08.csv  flights_part_09.csv  flights_part_10.csv
datalake/stage/: flights_part_01.csv  flights_part_03.csv
dbt/: dbt_project.yml
docker/airflow/: Dockerfile
docker/jupyter/: Dockerfile.transformer
docker/postgres/: Dockerfile.postgres
dw_db/init/: 000_create_schemas.sql  001_create_table_base.sql
pipelines/ingestion/: check_files_in_stage.py  file_management.py  spark_processing.py
pipelines/setup/: create_schemas.py  split_filghts_in_chunks.py
pipelines/transformation/: flights_transformations.py
pipelines/utils/: create_schemas.py  file_management.py  spark_helpers.py  spark_processing.py
postgres/: Dockerfile
postgres/init/: 000_create_schemas.sql  001_create_table_base.sql  001_create_table_silver.sql  002_create_table_gold.sql
transformer/: 01_etl_stage_to_bronze.ipynb  01_etl_stage_to_raw.ipynb  02_etl_bronze_to_silver.ipynb  02_etl_raw_to_silver.ipynb  03_etl_silver_to_gold.ipynb  Dockerfile.transformer  etl_raw_to_silver.ipynb  etl_silver_to_gold.ipynb
transformer/dbt/: dbt_project.yml  profiles.yml
transformer/ingestion/: load_datalake_to_postgres.py
transformer/landing/: 00_kaggle_download.ipynb  00_landing_kaggle_download_and_prepare.ipynb  01_landing_unify_flight_chunks_job.ipynb  02_landing_convert_csv_to_parquet_job.ipynb  03_landing_move_files_to_bronze_job.ipynb  04_landing_cleanup_stage_job.ipynb  etl_landing_stage_to_bronze_debug.ipynb  reassemble_chunks.py  split_flights_in_chunks.py
transformer/refinement/: 01_refinement_airlines_transform_job.ipynb  02_refinement_airports_transform_job.ipynb  03_refinement_flights_transform_job.ipynb  04_refinement_silver_aggregate_job.ipynb  05_refinement_silver_load_job.ipynb  06_refinement_silver_cleanup_job.ipynb  airlines_transformations.py  flights_transformations.py
transformer/serving/: 00_serving_move_file_silver_to_gold_job.ipynb  01_serving_build_gold_star_schema_job.ipynb  02_serving_load_gold_to_postgres_job.ipynb  03_serving_cleanup_gold_job.ipynb
transformer/transformation/: airports_transformations.py  flights_transformations.py
transformer/utils/: check_files_in_folder.py  file_io.py  file_management.py  (+13 more)
(+55 files in other folders)
