[build-system]
requires = ["setuptools>=75", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-transformers"
version = "0.1.0"
description = "Transformers para serem utilizados pelas pipelines do projeto."
license = { text = "MIT" }
authors = [
  { name = "Matheus Henrique Dos Santos", email = "matheushenriquep285@gmail.com" }
]
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
airflow = [
    "apache-airflow-providers-docker==3.9.0",
    "apache-airflow-providers-postgres==5.10.0"
]

dbt = [
    "dbt-core==1.9.1",
    "dbt-postgres==1.9.1"
]

transformer = [
    "pyspark==4.0.1",
    "pandas==2.3.2",
    "pyarrow==15.0.2",
    "psycopg2-binary==2.9.9",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
    "scikit-learn==1.7.2",
    "papermill==2.5.0"
]

dev = [
    "airflow-transformers[airflow,dbt,transformer]",
    "pytest==8.4.1",
    "pytest-mock==3.14.0",
    "pytest-cov==4.1.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["transformer*"]
